--- a/guide/.vuepress/styles/mixins/scrollbar.scss
+++ b/guide/.vuepress/styles/mixins/scrollbar.scss
@@ -1,3 +1,9 @@
+:root {
+	--c-bg-scrollbar: var(--c-bg);
+	--c-bg-scrollbar-thumb: var(--theme-460);
+	--c-bg-scrollbar-thumb-hover: var(--theme-430);
+}
+
 @mixin customScrollbar($thin: true) {
 	@if $thin {
 		scrollbar-width: thin;
