--- a/guide/.vuepress/styles/index.scss
+++ b/guide/.vuepress/styles/index.scss
@@ -33,8 +33,12 @@ div[class*=language-].line-numbers-mode::after {
 	}
 }
 
-.discord-message .discord-message-content code.discord-message-inline-code {
-	color: inherit;
-	font-size: 0.9em;
-	padding: 0.2em;
+.discord-messages {
+	border-radius: 6px;
+
+	.discord-message .discord-message-content code.discord-message-inline-code {
+		color: inherit;
+		font-size: 0.9em;
+		padding: 0.2em;
+	}
 }
