fix: Use `--navbar-height` variable instead of explicit heght property

--- a/guide/.vuepress/styles/palette.scss
+++ b/guide/.vuepress/styles/palette.scss
@@ -65,6 +65,7 @@ $codeLang: 'html' 'js' 'json' 'md' 'sh' 'ts';
 		Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
 
 	// layout
+	--navbar-height: 4rem;
 	--content-width: 920px;
 }
 
