--- a/guide/.vuepress/styles/index.scss
+++ b/guide/.vuepress/styles/index.scss
@@ -31,6 +31,18 @@ div[class*=language-].line-numbers-mode::after {
 	.fade-slide-y-leave-active {
 		transition: all 0.2s cubic-bezier(1, 0.5, 0.8, 1);
 	}
+
+	.page {
+		.page-meta .meta-item {
+			&.edit-link .meta-item-label {
+				color: var(--c-text-accent);
+			}
+
+			&.last-updated .meta-item-label {
+				color: var(--c-brand);
+			}
+		}
+	}
 }
 
 .discord-messages {
