refactor(theme): Remove transitions on html, body, and sidebar

--- a/guide/.vuepress/styles/index.scss
+++ b/guide/.vuepress/styles/index.scss
@@ -10,6 +10,10 @@ html {
 	@include customScrollbar(false);
 }
 
+html, body, .theme-container .sidebar {
+	transition: none;
+}
+
 h2 {
 	padding-bottom: 0;
 	border-bottom: 0;
