--- a/guide/.vuepress/styles/sidebar.scss
+++ b/guide/.vuepress/styles/sidebar.scss
@@ -11,6 +11,7 @@
 	top: 4rem;
 	font-size: 14px;
 	border-right-width: 0;
+	transition: transform 0.2s ease;
 	@include customScrollbar();
 
 	@media (max-width: 719px) {
