--- a/guide/.vuepress/styles/palette.scss
+++ b/guide/.vuepress/styles/palette.scss
@@ -66,7 +66,8 @@ $codeLang: 'html' 'js' 'json' 'md' 'sh' 'ts';
 
 	// layout
 	--navbar-height: 4rem;
-	--content-width: 1536px;
+	--content-width: 100%;
+	--wrapper-max-width: 96rem;
 }
 
 html.guide-theme-blurple {
