--- a/guide/.vuepress/styles/sidebar.scss
+++ b/guide/.vuepress/styles/sidebar.scss
@@ -20,8 +20,20 @@
 	}
 
 	.navbar-links {
+		@media screen and (max-width: 959px) {
+			display: block;
+			padding: 0.5rem;
+		}
+
 		@media screen and (max-width: 719px) {
 			padding: 0.5rem;
+		}
+
+		.navbar-links-item {
+			@media screen and (max-width: 959px) {
+				margin-left: 0;
+				padding-left: 1.25rem;
+			}
 		}
 	}
 
