--- a/guide/.vuepress/styles/index.scss
+++ b/guide/.vuepress/styles/index.scss
@@ -51,6 +51,11 @@ div[class*=language-].line-numbers-mode::after {
 	}
 }
 
+#nprogress .bar {
+	--nprogress-color: var(--c-brand-light);
+	height: 0.375rem !important;
+}
+
 .discord-messages {
 	border-radius: 6px;
 
