refactor(theme): Move UserSettings into Sidebar

--- a/guide/.vuepress/styles/sidebar.scss
+++ b/guide/.vuepress/styles/sidebar.scss
@@ -49,10 +49,18 @@
 	}
 
 	& > .sidebar-links {
-		padding: 0 0.5rem 1.25rem;
+		padding: 1.25rem 0.5rem;
 
 		@media screen and (max-width: 719px) {
 			padding: 0 0.5rem 0.5rem;
+		}
+
+		.sidebar-group {
+			&.sidebar-group-collapsed {
+				.sidebar-heading .menu-icon {
+					transform: rotate(-90deg);
+				}
+			}
 		}
 
 		.sidebar-heading {
@@ -60,6 +68,19 @@
 			font-weight: 700;
 			text-transform: uppercase;
 			border-left-width: 0;
+		}
+
+		button.sidebar-heading {
+			background: none;
+			display: inline-flex;
+			align-items: center;
+			border: none;
+			cursor: pointer;
+
+			.menu-icon {
+				width: 1.5em;
+				height: 1.5em;
+			}
 		}
 
 		.sidebar-item:not(.sidebar-heading) {
