refactor(theme): Lighten `--c-text` color on dark theme

--- a/guide/.vuepress/styles/theme-variables.scss
+++ b/guide/.vuepress/styles/theme-variables.scss
@@ -101,7 +101,7 @@ html.dark {
 	--c-bg-sidebar: #191919;
 
 	// text colors
-	--c-text: #9ca3af;
+	--c-text: #d1d5db;
 	--c-text-accent: var(--c-brand-light);
 
 	// custom container colors
