--- a/guide/.vuepress/templates/index.ssr.html
+++ b/guide/.vuepress/templates/index.ssr.html
@@ -15,9 +15,14 @@
 		}
 	</style>
 	<script>
-		if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
-			document.documentElement.classList.toggle('dark', true);
-		}
+		(() => {
+			const userMode = localStorage.getItem('guide-color-scheme');
+			const systemDarkMode = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+	
+			if (userMode === 'dark' || (userMode !== 'light' && systemDarkMode)) {
+				document.documentElement.classList.toggle('dark', true);
+			}
+		})()
 	</script>
 <!--vuepress-ssr-head-->
 <!--vuepress-ssr-resources-->
