--- a/guide/.vuepress/templates/index.ssr.html
+++ b/guide/.vuepress/templates/index.ssr.html
@@ -25,7 +25,7 @@
 			}
 
 			const themes = ['blurple'];
-			const colorTheme = localStorage.getItem('guide-color-theme');
+			let colorTheme = localStorage.getItem('guide-color-theme');
 
 			if (colorTheme !== 'default' && !themes.includes(colorTheme)) {
 				colorTheme = 'default';
