refactor(styles): `@media screen` -> `@media`

--- a/guide/.vuepress/styles/layout.scss
+++ b/guide/.vuepress/styles/layout.scss
@@ -4,7 +4,7 @@
 	position: relative;
 	margin: 0 auto;
 
-	@media screen and (max-width: 719px) {
+	@media (max-width: 719px) {
 		display: block;
 	}
 
@@ -25,7 +25,7 @@
 		top: 4rem;
 		z-index: 10;
 
-		@media screen and (max-width: 719px) {
+		@media (max-width: 719px) {
 			position: fixed;
 			transform: translateX(-100%);
 			transition: transform 0.2s ease;
@@ -43,11 +43,11 @@
 		padding-left: 0;
 		width: calc(100% - var(--sidebar-width));
 
-		@media screen and (max-width: 959px) {
+		@media (max-width: 959px) {
 			width: calc(100% - var(--sidebar-width-mobile));
 		}
 
-		@media screen and (max-width: 719px) {
+		@media (max-width: 719px) {
 			width: 100%;
 		}
 	}
@@ -55,7 +55,7 @@
 
 .theme-container.sidebar-open .content-wrapper {
 	.sidebar-wrapper {
-		@media screen and (max-width: 719px) {
+		@media (max-width: 719px) {
 			transform: translateX(0);
 		}
 	}
