--- a/guide/.vuepress/styles/search.scss
+++ b/guide/.vuepress/styles/search.scss
@@ -28,7 +28,7 @@ html.dark .DocSearch {
 		border-radius: 0.375rem;
 		margin-left: 2rem;
 
-		@media screen and (max-width: 719px) {
+		@media (max-width: 719px) {
 			width: unset;
 			background-color: unset;
 			margin-left: 0.5rem;
@@ -49,7 +49,7 @@ html.dark .DocSearch {
 				width: 1rem;
 				height: 1rem;
 
-				@media screen and (max-width: 719px) {
+				@media (max-width: 719px) {
 					width: 1.25rem;
 					height: 1.25rem;
 				}
@@ -58,23 +58,23 @@ html.dark .DocSearch {
 			.DocSearch-Button-Placeholder {
 				padding: 0 1rem;
 
-				@media screen and (max-width: 750px) {
+				@media (max-width: 750px) {
 					display: inline-block;
 				}
 
-				@media screen and (max-width: 719px) {
+				@media (max-width: 719px) {
 					display: none;
 				}
 			}
 		}
 
 		.DocSearch-Button-Keys {
-			@media screen and (max-width: 719px) {
+			@media (max-width: 719px) {
 				display: none;
 			}
 
 			.DocSearch-Button-Key {
-				@media screen and (max-width: 750px) {
+				@media (max-width: 750px) {
 					display: flex;
 				}
 
