refactor(styles): Use `rem` instead of `px`

--- a/guide/.vuepress/styles/custom-blocks.scss
+++ b/guide/.vuepress/styles/custom-blocks.scss
@@ -9,7 +9,7 @@ details.custom-container.details,
 details.custom-container.details,
 .custom-container.tip,
 .custom-container.warning {
-	border-radius: 6px;
+	border-radius: 0.375rem;
 }
 
 .custom-container {
