--- a/guide/.vuepress/styles/search.scss
+++ b/guide/.vuepress/styles/search.scss
@@ -22,7 +22,7 @@ html.dark .DocSearch {
 		height: unset;
 		width: 100%;
 		font-size: 1em;
-		padding: 14px 12px;
+		padding: 0.875rem 0.75rem;
 		border-width: 0;
 		box-shadow: none;
 		border-radius: 0.375rem;
