--- a/guide/.vuepress/styles/index.scss
+++ b/guide/.vuepress/styles/index.scss
@@ -63,7 +63,7 @@ div[class*=language-].line-numbers-mode::after {
 }
 
 .discord-messages {
-	border-radius: 6px;
+	border-radius: 0.375rem;
 
 	.discord-message .discord-message-content code.discord-message-inline-code {
 		color: inherit;
