--- a/guide/.vuepress/styles/index.scss
+++ b/guide/.vuepress/styles/index.scss
@@ -1,3 +1,5 @@
+@import './theme-variables.scss';
+@import './layout.scss';
 @import './navbar.scss';
 @import './search.scss';
 @import './sidebar.scss';
@@ -49,8 +51,19 @@ div[class*=language-].line-numbers-mode::after {
 	}
 }
 
+#nprogress {
+	.bar {
+		--nprogress-color: var(--c-brand-light);
+		height: 0.375rem !important;
+
+		.peg {
+			box-shadow: none;
+		}
+	}
+}
+
 .discord-messages {
-	border-radius: 6px;
+	border-radius: 0.375rem;
 
 	.discord-message .discord-message-content code.discord-message-inline-code {
 		color: inherit;
