refactor(styles): Add outline to `summary:focus-visible`

--- a/guide/.vuepress/styles/custom-blocks.scss
+++ b/guide/.vuepress/styles/custom-blocks.scss
@@ -24,4 +24,8 @@ details.custom-container.details,
 	&.danger a {
 		color: var(--c-danger-title);
 	}
+
+	&.details summary:focus-visible {
+		outline: 1px solid;
+	}
 }
