refactor(styles): Change tip container link colors

--- a/guide/.vuepress/styles/custom-blocks.scss
+++ b/guide/.vuepress/styles/custom-blocks.scss
@@ -14,7 +14,7 @@ details.custom-container.details,
 
 .custom-container {
 	&.tip a {
-		color: var(--c-tip-title);
+		color: var(--c-tip-link);
 	}
 
 	&.warning a {
